--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@apollo/client": "^3.3.12",
     "apollo": "^2.32.5",
     "apollo-client": "2.6.10",
+    "autoprefixer": "^10.2.5",
     "graphql": "^15.4.0",
+    "postcss": "^8.2.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.15.5",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2",
+    "react-scripts": "^4.0.3",
+    "tailwindcss": "^2.0.4",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
@@ -26,11 +29,12 @@
     "@types/react-router-dom": "^5.1.7"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm run tailwind:build & react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "apollo:codegen": "apollo client:codegen src/__generated__ --target=typescript --outputFlat"
+    "apollo:codegen": "apollo client:codegen src/__generated__ --target=typescript --outputFlat",
+    "tailwind:build": "tailwind build ./src/styles/tailwind.css -o ./src/styles/styles.css"
   },
   "browserslist": [
     ">0.2%",
