--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
   },
   "scripts": {
     "start": "npm run tailwind:build & react-scripts start",
-    "build": "react-scripts build",
+    "prebuild": "npm run tailwind:prodbuild",
+    "build": "CI=false react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "apollo:codegen": "apollo client:codegen src/__generated__ --target=typescript --outputFlat",
+    "tailwind:prodbuild": "NODE_ENV=production npm run tailwind:build",
     "tailwind:build": "tailwind build ./src/styles/tailwind.css -o ./src/styles/styles.css"
   },
   "browserslist": [
