--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss": "^8.2.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-helmet-async": "^1.0.9",
     "react-hook-form": "^6.15.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
+    "@types/react-helmet": "^6.1.0",
     "@types/react-router-dom": "^5.1.7"
   },
   "scripts": {
