--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "17.0.1",
     "react-helmet-async": "^1.0.9",
     "react-hook-form": "^6.15.5",
+    "react-multi-carousel": "^2.6.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "tailwindcss": "^2.0.4",
