--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   "main": "src/index.tsx",
   "dependencies": {
     "@apollo/client": "^3.3.12",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^13.1.1",
+    "@types/jest": "^26.0.22",
     "apollo": "^2.32.5",
     "apollo-client": "2.6.10",
     "autoprefixer": "^10.2.5",
+    "cypress": "^6.8.0",
     "graphql": "^15.4.0",
+    "mock-apollo-client": "^1.0.0",
     "postcss": "^8.2.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -26,6 +32,7 @@
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^7.0.5",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@types/react-helmet": "^6.1.0",
@@ -35,16 +42,24 @@
     "start": "npm run tailwind:build & react-scripts start",
     "prebuild": "npm run tailwind:prodbuild",
     "build": "CI=false react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test --env=jsdom --verbose",
     "eject": "react-scripts eject",
     "apollo:codegen": "apollo client:codegen src/__generated__ --target=typescript --outputFlat",
     "tailwind:prodbuild": "NODE_ENV=production npm run tailwind:build",
-    "tailwind:build": "tailwind build ./src/styles/tailwind.css -o ./src/styles/styles.css"
+    "tailwind:build": "tailwind build ./src/styles/tailwind.css -o ./src/styles/styles.css",
+    "test:coverage": "npm test -- --coverage --watchAll=false"
   },
   "browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "jest": {
+    "collectCoverageFrom": [
+      "./src/components/**/*.tsx",
+      "./src/pages/**/*.tsx",
+      "./src/routers/**/*.tsx"
+    ]
+  }
 }
