--- a/package.json
+++ b/package.json
@@ -1,60 +1,78 @@
 {
-  "name": "podcast-frontend",
-  "version": "1.0.0",
-  "description": "podcast frontend challenge",
-  "keywords": [
-    "typescript",
-    "react",
-    "starter"
-  ],
-  "main": "src/index.tsx",
+  "name": "nuber-eats-frontend",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@apollo/client": "^3.3.12",
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^13.1.1",
-    "@types/jest": "^26.0.22",
-    "apollo": "^2.32.5",
-    "apollo-client": "2.6.10",
-    "autoprefixer": "^10.2.5",
-    "cypress": "^6.8.0",
-    "graphql": "^15.4.0",
-    "mock-apollo-client": "^1.0.0",
-    "postcss": "^8.2.8",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-helmet-async": "^1.0.9",
-    "react-hook-form": "^6.15.5",
+    "@apollo/client": "^3.3.10",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.7.1",
+    "@types/google-map-react": "^2.1.0",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^12.20.0",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "apollo": "^2.32.1",
+    "autoprefixer": "^10.2.4",
+    "cypress": "^6.5.0",
+    "google-map-react": "^2.1.9",
+    "graphql": "^15.5.0",
+    "history": "^5.0.0",
+    "postcss": "^8.2.6",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.0.7",
+    "react-hook-form": "^6.15.1",
     "react-multi-carousel": "^2.6.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
-    "tailwindcss": "^2.0.4",
-    "typescript": "^4.1.3"
-  },
-  "devDependencies": {
-    "@testing-library/cypress": "^7.0.5",
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
-    "@types/react-helmet": "^6.1.0",
-    "@types/react-router-dom": "^5.1.7"
+    "react-scripts": "4.0.2",
+    "rimraf": "^3.0.2",
+    "subscriptions-transport-ws": "^0.9.18",
+    "tailwindcss": "^2.0.3",
+    "typescript": "^4.1.5",
+    "victory": "^35.4.9",
+    "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "start": "npm run tailwind:build & react-scripts start",
-    "prebuild": "npm run tailwind:prodbuild",
-    "build": "CI=false react-scripts build",
-    "test": "react-scripts test --env=jsdom --verbose",
-    "eject": "react-scripts eject",
-    "apollo:codegen": "apollo client:codegen src/__generated__ --target=typescript --outputFlat",
     "tailwind:prodbuild": "NODE_ENV=production npm run tailwind:build",
     "tailwind:build": "tailwind build ./src/styles/tailwind.css -o ./src/styles/styles.css",
+    "apollo:codegen": "rimraf src/__generated__ && apollo client:codegen src/__generated__ --target=typescript --outputFlat",
+    "start": "npm run apollo:codegen & npm run tailwind:build & react-scripts start",
+    "build": "CI=false react-scripts build",
+    "prebuild": "npm run tailwind:prodbuild",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "test:coverage": "npm test -- --coverage --watchAll=false"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@testing-library/cypress": "^7.0.4",
+    "@types/googlemaps": "^3.43.3",
+    "@types/react-helmet": "^6.1.0",
+    "@types/react-router-dom": "^5.1.7",
+    "mock-apollo-client": "^1.0.0"
+  },
   "jest": {
     "collectCoverageFrom": [
       "./src/components/**/*.tsx",
