--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "google-map-react": "^2.1.9",
     "graphql": "^15.5.0",
     "history": "^5.0.0",
+    "node-sass": "^5.0.0",
     "postcss": "^8.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-h5-audio-player": "^3.7.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.0.7",
     "react-hook-form": "^6.15.1",
